--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -5,11 +5,22 @@ html {
   font-size: 16px;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
   margin: 0;
   padding: 0;
   font-weight: lighter;
@@ -18,7 +29,39 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 /*  Set the font */
 body {
   font-family: "Helvetica", sans-serif;
+  font-size: 14px;
+  margin: 0 auto;
 }
 
 /* STYLES */
 /* Write your CSS below */
+
+#image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.title {
+  background-image: url("../images/apple-pie.jpg");
+  color: aliceblue;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 400px;
+  padding-top: 200px;
+  margin-left: 50px;
+  margin-right: 50px;
+  background-size: cover;
+}
+h2 {
+  padding-top: 50px;
+  text-align: center;
+  color: gray;
+}
+hr {
+  margin-top: 10px;
+}
+.content {
+  margin-left: 200px;
+  margin-right: 200px;
+}
